@@ -9,6 +9,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class MyUserDetails implements UserDetails {
 
@@ -20,9 +21,8 @@ public class MyUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority(user.getRole().getRoleName());
-        return Arrays.asList(authority);
+        return List.of(authority);
     }
     @Override
     public String getPassword() {
